--- a/public/css/main.css
+++ b/public/css/main.css
@@ -39,6 +39,7 @@ h1 {
     border-top: 0.0625rem solid #ebebeb;
     padding:0.9375rem;
     width: auto;
+    height: auto;
 }
 
 .caja-general {
@@ -96,6 +97,7 @@ h1 {
         display: grid;
         grid-template-columns: 45vw 45vw;
         min-width: auto;
+        min-height:auto;
         justify-content: center;
 
     }
@@ -104,6 +106,7 @@ h1 {
         display: grid;
         grid-template-columns: 45vw 45vw;
         min-width: auto;
+        min-height: auto;
         justify-content: center;
         align-items: center; 
     }
