--- a/public/css/main.css
+++ b/public/css/main.css
@@ -78,6 +78,9 @@ h1 {
     border-radius: 50%; 
 }
 
+.menu-block {
+        padding-bottom:2rem;
+}
 
 
 @media screen and (min-width:361px) and (max-width:768px) {
@@ -111,6 +114,10 @@ h1 {
     h1 {
         text-align: center;
         width: 90vw;
+    }
+    
+    .menu-block {
+        padding-bottom:2rem;
     }
 }
 
@@ -157,6 +164,11 @@ h1 {
     h1 {
         text-align: center;
     }
+    
+    .menu-block {
+        padding-bottom:0rem;
+}
+
 }
 
 
